--- a/documents/references.bib
+++ b/documents/references.bib
@@ -149,6 +149,14 @@
   note = {Accessed: 2016-03-06},
 }
 
+@misc{gearvr,
+  title = {{Virtual reality just got real}},
+  year = 2016,
+  howpublished = {\url{http://www.samsung.com/us/explore/gear-vr/}},
+  note = {Accessed: 2016-03-25},
+}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Application-specific - 3D Interaction
@@ -175,7 +183,7 @@
   publisher={ACM}
 }
 
-@inproceedings{wang20116d,
+@inproceedings{wang2011,
   title={6D hands: markerless hand-tracking for computer aided design},
   author={Wang, Robert and Paris, Sylvain and Popovi{\'c}, Jovan},
   booktitle={Proceedings of the 24th annual ACM symposium on User interface software and technology},
@@ -205,13 +213,24 @@
 }
 
 
-@inproceedings{keefe2001cavepainting,
+@inproceedings{keefe2001,
   title={CavePainting: a fully immersive 3D artistic medium and interactive experience},
   author={Keefe, Daniel F and Feliz, Daniel Acevedo and Moscovich, Tomer and Laidlaw, David H and LaViola Jr, Joseph J},
   booktitle={Proceedings of the 2001 symposium on Interactive 3D graphics},
   pages={85--93},
   year={2001},
   organization={ACM}
+}
+
+@article{deering1995,
+  title={Holosketch: A virtual reality sketching/animation tool},
+  author={Deering, Michael F},
+  journal={ACM Transactions on Computer-Human Interaction (TOCHI)},
+  volume={2},
+  number={3},
+  pages={220--238},
+  year={1995},
+  publisher={ACM}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
