--- a/documents/references.bib
+++ b/documents/references.bib
@@ -156,7 +156,12 @@
   note = {Accessed: 2016-03-25},
 }
 
-
+@misc{camshiftkalman,
+  title = {{An object tracking project using camshift and Kalman Filter based on OpenCV}},
+  year = 2016,
+  howpublished = {\url{http://www.samsung.com/us/explore/gear-vr/}},
+  note = {Accessed: 2016-03-15},
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Application-specific - 3D Interaction
